[gd_scene load_steps=43 format=3 uid="uid://ci20gh7ylt46v"]

[ext_resource type="Script" path="res://Mobs/mushroom.gd" id="1_ive3j"]
[ext_resource type="Texture2D" uid="uid://bolx8ew5yl6to" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0000_Layer-1.png" id="1_o448q"]
[ext_resource type="Texture2D" uid="uid://bcaa8abbefdqc" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0001_Layer-2.png" id="2_3ujsx"]
[ext_resource type="Texture2D" uid="uid://bf3av7qxwbyhl" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0002_Layer-3.png" id="3_hlngy"]
[ext_resource type="Texture2D" uid="uid://b22hsj2y4hua5" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0003_Layer-4.png" id="4_uw4ag"]
[ext_resource type="Texture2D" uid="uid://cssdsetknowuf" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0004_Layer-5.png" id="5_icwjj"]
[ext_resource type="Texture2D" uid="uid://6ewyhwfqc8yx" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0005_Layer-6.png" id="6_38a6f"]
[ext_resource type="Texture2D" uid="uid://cfhq881iyotx2" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0006_Layer-7.png" id="7_65a2u"]
[ext_resource type="Texture2D" uid="uid://bsiqirag466" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0007_Layer-8.png" id="8_dwe24"]
[ext_resource type="Texture2D" uid="uid://e30pg3sjyp6g" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0008_Layer-9.png" id="9_juvvt"]
[ext_resource type="Texture2D" uid="uid://bjbn5u7ds10q4" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/breatth-attack/_0009_Layer-10.png" id="10_7mbxb"]
[ext_resource type="Texture2D" uid="uid://dcts2j3bv3wsw" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0000_1.png" id="11_6lpaf"]
[ext_resource type="Texture2D" uid="uid://cg23hnht1gcgv" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Packs/Sunnyland/spritesheets/enemy-deadth.png" id="12_l77d0"]
[ext_resource type="Texture2D" uid="uid://v4msaps3tb4f" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0001_2.png" id="12_njq2c"]
[ext_resource type="Texture2D" uid="uid://ne408wea3ncl" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0002_3.png" id="13_vfqj2"]
[ext_resource type="Texture2D" uid="uid://dig2i1wg6nm6m" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0003_4.png" id="14_x7p4c"]
[ext_resource type="Texture2D" uid="uid://cwjokh7gpmfpb" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0004_5.png" id="15_820jd"]
[ext_resource type="Texture2D" uid="uid://c6vmdad4xy001" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0005_6.png" id="16_866wu"]
[ext_resource type="Texture2D" uid="uid://64ol0i7316k3" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0006_7.png" id="17_v77w6"]
[ext_resource type="Texture2D" uid="uid://daicjyg5wgtif" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0007_8.png" id="18_bho2f"]
[ext_resource type="Texture2D" uid="uid://t576wq0lj63n" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/jump/_0008_9.png" id="19_djgrf"]
[ext_resource type="Texture2D" uid="uid://baycy5lyy6xfu" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0000_Layer-1.png" id="20_tlxxu"]
[ext_resource type="Texture2D" uid="uid://bdo8uddfgfthr" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0001_Layer-2.png" id="21_87588"]
[ext_resource type="Texture2D" uid="uid://ctje0jw5dmkpf" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0002_Layer-3.png" id="22_kxcpp"]
[ext_resource type="Texture2D" uid="uid://cu33e7gnroa73" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0003_Layer-4.png" id="23_7n52p"]
[ext_resource type="Texture2D" uid="uid://d1y24y0ahsrqi" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0004_Layer-5.png" id="24_vj7fo"]
[ext_resource type="Texture2D" uid="uid://dlgmv7d705ls1" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0005_Layer-6.png" id="25_etiuq"]
[ext_resource type="Texture2D" uid="uid://d12wpkd3qth1c" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0006_Layer-7.png" id="26_wtsvh"]
[ext_resource type="Texture2D" uid="uid://bpqvcyncw20ul" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0007_Layer-8.png" id="27_ijn7v"]
[ext_resource type="Texture2D" uid="uid://bg4awaodwvnt0" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0008_Layer-9.png" id="28_7n88q"]
[ext_resource type="Texture2D" uid="uid://dfuud8im8t5mo" path="res://Sunny Land Collection Files/Sunny Land Collection Files/Assets/Characters/sunny-mushroom/sprites/walking/0__0009_Layer-10.png" id="29_ybfhj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyeon"]
size = Vector2(13, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_o54l3"]
atlas = ExtResource("12_l77d0")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rvas"]
atlas = ExtResource("12_l77d0")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4350"]
atlas = ExtResource("12_l77d0")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv7no"]
atlas = ExtResource("12_l77d0")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_1isxe"]
atlas = ExtResource("12_l77d0")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lpwl"]
atlas = ExtResource("12_l77d0")
region = Rect2(200, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_tmcif"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_o448q")
}, {
"duration": 1.0,
"texture": ExtResource("2_3ujsx")
}, {
"duration": 1.0,
"texture": ExtResource("3_hlngy")
}, {
"duration": 1.0,
"texture": ExtResource("4_uw4ag")
}, {
"duration": 1.0,
"texture": ExtResource("5_icwjj")
}, {
"duration": 1.0,
"texture": ExtResource("6_38a6f")
}, {
"duration": 1.0,
"texture": ExtResource("7_65a2u")
}, {
"duration": 1.0,
"texture": ExtResource("8_dwe24")
}, {
"duration": 1.0,
"texture": ExtResource("9_juvvt")
}, {
"duration": 1.0,
"texture": ExtResource("10_7mbxb")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o54l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rvas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4350")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv7no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1isxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lpwl")
}],
"loop": false,
"name": &"dead",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_6lpaf")
}, {
"duration": 1.0,
"texture": ExtResource("12_njq2c")
}, {
"duration": 1.0,
"texture": ExtResource("13_vfqj2")
}, {
"duration": 1.0,
"texture": ExtResource("14_x7p4c")
}, {
"duration": 1.0,
"texture": ExtResource("15_820jd")
}, {
"duration": 1.0,
"texture": ExtResource("16_866wu")
}, {
"duration": 1.0,
"texture": ExtResource("17_v77w6")
}, {
"duration": 1.0,
"texture": ExtResource("18_bho2f")
}, {
"duration": 1.0,
"texture": ExtResource("19_djgrf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("20_tlxxu")
}, {
"duration": 0.5,
"texture": ExtResource("21_87588")
}, {
"duration": 0.5,
"texture": ExtResource("22_kxcpp")
}, {
"duration": 0.5,
"texture": ExtResource("23_7n52p")
}, {
"duration": 0.5,
"texture": ExtResource("24_vj7fo")
}, {
"duration": 0.5,
"texture": ExtResource("25_etiuq")
}, {
"duration": 0.5,
"texture": ExtResource("26_wtsvh")
}, {
"duration": 0.5,
"texture": ExtResource("27_ijn7v")
}, {
"duration": 0.5,
"texture": ExtResource("28_7n88q")
}, {
"duration": 0.5,
"texture": ExtResource("29_ybfhj")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qcbk6"]
radius = 175.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ud8e"]
size = Vector2(18, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o47x0"]
size = Vector2(22, 17.5)

[node name="mushroom" type="CharacterBody2D"]
script = ExtResource("1_ive3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_cyeon")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tmcif")
animation = &"walk"

[node name="Detection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_qcbk6")

[node name="Killed" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killed"]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_3ud8e")

[node name="Hurt" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt"]
visible = false
position = Vector2(0, 3.75)
shape = SubResource("RectangleShape2D_o47x0")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="proof_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_detection_body_exited"]
[connection signal="body_entered" from="Killed" to="." method="_on_killed_body_entered"]
[connection signal="body_entered" from="Hurt" to="." method="_on_hurt_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="proof_timer" to="." method="_on_proof_timer_timeout"]
